extends Control

# ë…¸ë“œ ì°¸ì¡°
@onready var close_button = $weather_window/container/CloseButton
@onready var title_label = $weather_window/container/TitleLabel
@onready var container = $weather_window/container

# ê¸°ìƒ ì •ë³´ìš© ë…¸ë“œ
@onready var weather_display = $weather_window/container/WeatherDisplay
@onready var graph_display = $weather_window/container/GraphDisplay
@onready var refresh_button = $weather_window/container/RefreshButton
@onready var graph_type_selector = $weather_window/container/GraphTypeSelector
@onready var http_request = $HTTPRequest
@onready var http_request_graph = $HTTPRequestGraph

# API ì„¤ì •
var api_base = "http://34.229.121.126:8000"
var current_graph_type = "separate"

var is_popup_mode = false
var is_loading_weather = false
var is_loading_graph = false

func _ready():
	## ê¸°ë³¸ ì„¤ì •
	setup_enhanced_ui()
	
	## ì‹œê·¸ë„ ì—°ê²°
	if close_button:
		close_button.pressed.connect(_on_close_pressed)
	if refresh_button:
		refresh_button.pressed.connect(_on_refresh_pressed)
	if graph_type_selector:
		graph_type_selector.item_selected.connect(_on_graph_type_selected)
	
	if http_request:
		http_request.request_completed.connect(_on_weather_request_completed)
	if http_request_graph:
		http_request_graph.request_completed.connect(_on_graph_request_completed)
	
	## ì´ˆê¸°ì—ëŠ” ìˆ¨ê¹€
	hide()
	z_index = 2 

func setup_enhanced_ui():
	# ê¸°ì¡´ ë°°ê²½ ìŠ¤íƒ€ì¼ ìœ ì§€
	var style_box = StyleBoxFlat.new()
	style_box.bg_color = Color(0.1, 0.1, 0.3, 0.95)
	style_box.border_color = Color(0.3, 0.3, 0.6, 1.0)
	style_box.border_width_left = 3
	style_box.border_width_right = 3
	style_box.border_width_top = 3
	style_box.border_width_bottom = 3
	style_box.corner_radius_top_left = 15
	style_box.corner_radius_top_right = 15
	style_box.corner_radius_bottom_left = 15
	style_box.corner_radius_bottom_right = 15
	add_theme_stylebox_override("panel", style_box)
	
	# ê¸°ìƒ ì •ë³´ í‘œì‹œ ì„¤ì •
	if weather_display:
		weather_display.bbcode_enabled = true
		weather_display.text = "[center][color=gray]ê¸°ìƒ ë°ì´í„°ë¥¼ ë¶ˆëŸ¬ì˜¤ëŠ” ì¤‘...[/color][/center]"
	
	# ê·¸ë˜í”„ ì„ íƒê¸° ì„¤ì •
	if graph_type_selector:
		setup_graph_selector()
	
	# ì œëª© ë¼ë²¨ ì„¤ì •
	if title_label:
		title_label.text = "ğŸŒ¤ï¸ ì˜¨ì‹¤ í™˜ê²½ ì •ë³´"
		title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		
	# ë ˆì´ì•„ì›ƒ ì„¤ì •
	layout_popup_elements()

func setup_graph_selector():
	graph_type_selector.clear()
	graph_type_selector.add_item("ê°œë³„ ê·¸ë˜í”„", 0)
	graph_type_selector.add_item("ì¼ë³„ ê·¸ë˜í”„", 1)
	graph_type_selector.add_item("ì¢…í•© ê·¸ë˜í”„", 2)
	graph_type_selector.selected = 0

func layout_popup_elements():
	# íŒì—… í¬ê¸°ë¥¼ ë„“ê²Œ (ê·¸ë˜í”„ í‘œì‹œë¥¼ ìœ„í•´)
	var popup_size = Vector2(900, 600)
	size = popup_size
	container.position = Vector2(100, 120)
	
	# ì œëª©ê³¼ ë‹«ê¸° ë²„íŠ¼ (ê¸°ì¡´ ìœ„ì¹˜ ìœ ì§€)
	if title_label:
		title_label.position = Vector2(50, -20)
		title_label.size = Vector2(size.x - 100, 30)
	
	if close_button:
		close_button.position = Vector2(size.x - 80, -20)
		close_button.size = Vector2(60, 30)
		close_button.text = "âœ•"
	
	# ì»¨í…ì¸  ì˜ì—­
	var content_top = 20
	var content_height = size.y - content_top 
	
	# ìƒˆë¡œê³ ì¹¨ ë²„íŠ¼ê³¼ ê·¸ë˜í”„ ì„ íƒ
	if refresh_button:
		refresh_button.position = Vector2(20, content_top)
		refresh_button.size = Vector2(100, 30)
		refresh_button.text = "ìƒˆë¡œê³ ì¹¨"
		refresh_button.show()
	
	if graph_type_selector:
		graph_type_selector.position = Vector2(130, content_top)
		graph_type_selector.size = Vector2(150, 30)
		graph_type_selector.show()
	
	# ì¢Œìš° ë¶„í• : ê¸°ìƒ ë°ì´í„°(ì¢Œ) | ê·¸ë˜í”„(ìš°)
	var data_content_top = content_top + 40
	var data_content_height = content_height - 40
	var left_width = 280  # ê¸°ìƒ ë°ì´í„° ì˜ì—­
	var right_width = size.x - left_width - 60  # ê·¸ë˜í”„ ì˜ì—­
	
	# ê¸°ìƒ ë°ì´í„° í‘œì‹œ (ì¢Œì¸¡)
	if weather_display:
		weather_display.position = Vector2(20, data_content_top)
		weather_display.size = Vector2(left_width, data_content_height)
		weather_display.show()
	
	# ê·¸ë˜í”„ í‘œì‹œ (ìš°ì¸¡)
	if graph_display:
		graph_display.position = Vector2(left_width + 40, data_content_top)
		graph_display.size = Vector2(right_width, data_content_height)
		graph_display.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
		graph_display.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
		graph_display.show()

func show_popup():
	is_popup_mode = true
	layout_popup_elements()
	show()
	
	# ë°ì´í„° ë¡œë“œ
	load_weather_data()
	print("ìŠ¤ë§ˆíŠ¸íŒœ ê¸°ìƒ ì •ë³´ íŒì—… í‘œì‹œë¨")

func hide_popup():
	hide()
	print("ìŠ¤ë§ˆíŠ¸íŒœ ê¸°ìƒ ì •ë³´ íŒì—… ìˆ¨ê¹€")

func _on_close_pressed():
	hide_popup()

func _on_refresh_pressed():
	load_weather_data()

func _on_graph_type_selected(index: int):
	match index:
		2:
			current_graph_type = "combined"
		0:
			current_graph_type = "separate"
		1:
			current_graph_type = "daily"
	
	# ê·¸ë˜í”„ ë‹¤ì‹œ ë¡œë“œ
	load_graph_image()

func load_weather_data():
	# ìµœì‹  ê¸°ìƒ ë°ì´í„° ë¡œë“œ
	fetch_latest_weather()
	# ê·¸ë˜í”„ ìƒì„± í›„ ì´ë¯¸ì§€ ë¡œë“œ
	generate_and_load_graph()

func fetch_latest_weather():
	if is_loading_weather:
		return
	
	is_loading_weather = true
	var api_url = api_base + "/api/weather/latest"
	
	if weather_display:
		weather_display.text = "[center][color=yellow]ìµœì‹  ê¸°ìƒ ë°ì´í„° ë¡œë”© ì¤‘...[/color][/center]"
	
	print("ê¸°ìƒ ë°ì´í„° API ìš”ì²­: ", api_url)
	
	var error = http_request.request(api_url)
	if error != OK:
		is_loading_weather = false
		if weather_display:
			weather_display.text = "[color=red]API ìš”ì²­ ì‹¤íŒ¨: " + str(error) + "[/color]"

func _on_weather_request_completed(result: int, response_code: int, headers: PackedStringArray, body: PackedByteArray):
	is_loading_weather = false
	
	print("ê¸°ìƒ ë°ì´í„° API ì‘ë‹µ ì½”ë“œ: ", response_code)
	
	if response_code != 200:
		if weather_display:
			weather_display.text = "[color=red]ì„œë²„ ì˜¤ë¥˜: " + str(response_code) + "[/color]"
		return
	
	var json_string = body.get_string_from_utf8()
	print("ë°›ì€ ê¸°ìƒ ë°ì´í„°: ", json_string)
	
	var json = JSON.new()
	var parse_result = json.parse(json_string)
	
	if parse_result != OK:
		if weather_display:
			weather_display.text = "[color=red]ë°ì´í„° íŒŒì‹± ì˜¤ë¥˜[/color]"
		return
	
	var data = json.data
	display_weather_data(data)

func display_weather_data(data: Dictionary):
	if not weather_display:
		return
	
	var content = "[center][color=white]ğŸŒ¤ï¸ ìµœì‹  ê¸°ìƒ ì •ë³´[/color][/center]\n\n"
	
	# íƒ€ì„ìŠ¤íƒ¬í”„
	if data.has("timestamp"):
		var timestamp = data["timestamp"]
		content += "[color=lightblue]ğŸ“… ì¸¡ì • ì‹œê°„[/color]\n"
		content += "[color=white]" + str(timestamp) + "[/color]\n\n"
	
	# ì˜¨ë„
	if data.has("temp"):
		content += "[color=orange]ğŸŒ¡ï¸ ì˜¨ë„[/color]\n"
		content += "[color=white]" + str(data["temp"]) + " Â°C[/color]\n\n"
	
	# ìŠµë„
	if data.has("humid"):
		content += "[color=cyan]ğŸ’§ ìŠµë„[/color]\n"
		content += "[color=white]" + str(data["humid"]) + " %[/color]\n\n"
	
	# ì¼ì‚¬ëŸ‰
	if data.has("radn"):
		content += "[color=yellow]â˜€ï¸ ì¼ì‚¬ëŸ‰[/color]\n"
		content += "[color=white]" + str(data["radn"]) + " W/mÂ²[/color]\n\n"
	
	# í’ì†
	if data.has("wind"):
		content += "[color=lightgreen]ğŸ’¨ í’ì†[/color]\n"
		content += "[color=white]" + str(data["wind"]) + " m/s[/color]\n\n"
	
	# í’í–¥
	if data.has("wind_degree"):
		content += "[color=lightgreen]ğŸ§­ í’í–¥[/color]\n"
		content += "[color=white]" + str(data["wind_degree"]) + " Â°[/color]\n\n"
	
	# ê°•ìš°ëŸ‰
	if data.has("rainfall"):
		content += "[color=blue]ğŸŒ§ï¸ ê°•ìš°ëŸ‰[/color]\n"
		content += "[color=white]" + str(data["rainfall"]) + " mm[/color]\n\n"
	
	# ë°°í„°ë¦¬
	if data.has("battery"):
		content += "[color=gray]ğŸ”‹ ë°°í„°ë¦¬[/color]\n"
		content += "[color=white]" + str(data["battery"]) + " V[/color]\n"
	
	weather_display.text = content

func generate_and_load_graph():
	# ë¨¼ì € ê·¸ë˜í”„ ìƒì„± API í˜¸ì¶œ
	var generate_url = api_base + "/api/graph/generate"
	print("ê·¸ë˜í”„ ìƒì„± ìš”ì²­: ", generate_url)
	
	# ê°„ë‹¨íˆ ë°”ë¡œ ì´ë¯¸ì§€ ë¡œë“œ (ìƒì„±ì€ ë°±ê·¸ë¼ìš´ë“œì—ì„œ)
	await get_tree().create_timer(0.5).timeout
	load_graph_image()

func load_graph_image():
	if is_loading_graph:
		return
	
	is_loading_graph = true
	var graph_url = api_base + "/api/graph/image/" + current_graph_type
	
	print("ê·¸ë˜í”„ ì´ë¯¸ì§€ ìš”ì²­: ", graph_url)
	
	var error = http_request_graph.request(graph_url)
	if error != OK:
		is_loading_graph = false
		print("ê·¸ë˜í”„ ì´ë¯¸ì§€ ìš”ì²­ ì‹¤íŒ¨: ", error)

func _on_graph_request_completed(result: int, response_code: int, headers: PackedStringArray, body: PackedByteArray):
	is_loading_graph = false
	
	print("ê·¸ë˜í”„ ì´ë¯¸ì§€ ì‘ë‹µ ì½”ë“œ: ", response_code)
	
	if response_code != 200:
		print("ê·¸ë˜í”„ ì´ë¯¸ì§€ ë¡œë“œ ì‹¤íŒ¨: ", response_code)
		return
	
	# ì´ë¯¸ì§€ ë°ì´í„°ë¥¼ í…ìŠ¤ì²˜ë¡œ ë³€í™˜
	var image = Image.new()
	var error = image.load_png_from_buffer(body)
	
	if error != OK:
		print("ì´ë¯¸ì§€ ë¡œë“œ ì‹¤íŒ¨: ", error)
		return
	
	var texture = ImageTexture.create_from_image(image)
	
	if graph_display:
		graph_display.texture = texture
		print("ê·¸ë˜í”„ ì´ë¯¸ì§€ í‘œì‹œ ì™„ë£Œ")

func _input(event):
	if visible and is_popup_mode and event.is_action_pressed("ui_cancel"):
		hide_popup()
